# cmangos-modules

./: .gitignore  CMakeLists.txt  README.md  modules.conf
patches/: classic.patch  tbc.patch
src/: CmangosModule.cpp  CmangosModule.h  CmangosModuleConfig.cpp  CmangosModuleConfig.h  Module.cpp  Module.h  ModuleConfig.cpp  ModuleConfig.h  ModuleMgr.cpp  ModuleMgr.h  Modules.h
